# Summer_School_Package

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: Testing_and_Packaging.yml  ch07-packaging.yml
src/lowrankdensity/: __init__.py
src/lowrankdensity/datasets/: __init__.py
src/lowrankdensity/models/: __init__.py  continuous.py
src/lowrankdensity/viz/: __init__.py
test/: test_continuous.py  test_discrete.py  test_generate_samples.py
tests/: test_discrete.py  test_generate_samples.py
