[metadata]
name = lowrankdensity_demo
version = 0.0.3
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yohila/Summer_School_Package
author = Hi Paris
author_email = "Hi! Paris" <contact@hiparis.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy
    scipy

[options.packages.find]
where = src
exclude =
    test*


######################
# Tool configuration #
######################

[tool:pytest]
testpaths = test

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/lowrankdensity
    */site-packages/lowrankdensity